merge: logic misc - AdvancedAECompat 2.0.4 semantics via reflection (unwrap/overload-variant/encode/restore), closed-loop getOutputs GenericStack[] for AE2 15.4.10, getKey/getFirst/Java17 fixes across tianshu loop+maintenance; E8=2920